Fix footer text size (esp. on mobile)

--- a/source/_templates/plugin_layouts/sphinx_bootstrap/static/runestone-iwu-custom-sphinx-bootstrap.css
+++ b/source/_templates/plugin_layouts/sphinx_bootstrap/static/runestone-iwu-custom-sphinx-bootstrap.css
@@ -84,7 +84,7 @@ div.figure p.caption:before {
     margin-top: 15px;
     background-color: #eee;
     color: #777;
-    font-size: 12pt;
+    font-size: 90%;
     line-height: 1.25em;
 }
 
